diseño seccion nav home y hackaton listas

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<!--NAV-->
-	<nav>
+	<nav id="nav">
 		<ul>
 			<li><a href="#" title="">Code Girls</a></li>
 			<li><a href="#" title="">Inicio</a></li>
@@ -16,6 +16,7 @@
 			<li><a href="#" title="">Contacto</a></li>
 		</ul>
 	</nav>
+	
 	<section id="home">
 		<h1>CHICAS QUE CAMBIAN EL MUNDO</h1>
 		<p>lorem ipsum sit amet</p>
@@ -24,9 +25,11 @@
 
 	<section id="hackaton">
 		<img src="assets/img/hackathon.jpg">
-		<h1>HACKATON</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta fuga a, amet ea reiciendis placeat quas cumque? Laboriosam consequatur consectetur autem natus eaque dolore, necessitatibus minus cum possimus incidunt, voluptatibus.</p>
-		<button>BOTÓN</button>
+		<div class="contenedor">
+		<h1 class="bloque">HACKATON</h1>
+		<p class="bloque">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta fuga a, amet ea reiciendis placeat quas cumque? Laboriosam consequatur consectetur autem natus eaque dolore, necessitatibus minus cum possimus incidunt, voluptatibus.</p>
+		<button class="bloque">BOTÓN</button>
+		</div>
 	</section>
 	<section>
 		<img src="assets/img/made_with_code.jpg">
