lista seccion contact

--- a/index.html
+++ b/index.html
@@ -31,25 +31,24 @@
 		<button class="bloque">BOTÓN</button>
 		</div>
 	</section>
-	<section>
+	<section id="contact">
 		<img src="assets/img/made_with_code.jpg">
-		<form>
-			<h2>CONTACTO</h2>
-			<p>hola holalhoakljsa</p>
-			<p>naklkashflkhsaflk</p>
-			<p>dlkahlkdh</p>
-			<p>86896860</p>
-			<input type="text" placeholder="Name" name="">
-			<input type="text" name="" placeholder="Last name">
-			<input type="email" placeholder="Email" name="">
-			<input type="text" placeholder="Message" name="">
+		<form class="contenedor">
+			<h1>CONTACTO</h1>
+			<p>Code Girls</p>
+			<p>Avenida Sol #1050</p>
+			<p>San Pedro, RM</p>
+			<p>Fono:(+56)86896860</p>
+			<input class="bloque" type="text" placeholder="Name" name="">
+			<input class="bloque" type="text" name="" placeholder="Last name">
+			<input class="bloque" type="email" placeholder="Email" name="">
+			<input class="bloque" type="text" placeholder="Message" name="">
 			<button>ENVIAR</button>
 		</form>
 	</section>
 	<footer>
-	<p>lorem ipsum et amet</p><a href="#">enlace</a>
+	<p>@2017 Code Girl Diseñado por</p><a href="#">Laboratoria</a>
 	</footer>
-
 	<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
