listo cambio frase

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	</nav>
 	
 	<section id="home">
-		<h1>CHICAS QUE CAMBIAN EL MUNDO</h1>
+		<h1 id="frase">CHICAS QUE CAMBIAN EL MUNDO</h1>
 		<p>lorem ipsum sit amet</p>
-		<button>BOTÓN</button>	
+		<button onclick="ins()">Inscríbete</button>	
 	</section>
 
 	<section id="hackaton">
@@ -43,7 +43,7 @@
 			<input class="bloque" type="text" id="lastname" placeholder="Last name" required>
 			<input class="bloque" type="email" placeholder="Email" id="correo" required>
 			<input class="bloque" type="text" placeholder="Message" id="mensaje" required>
-			<button onsubmit="return validacion()">ENVIAR</button>
+			<button onclick="validacion()">ENVIAR</button>
 		</form>
 	</section>
 	<footer>
