listo cambio de float img

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 	</section>
 
 	<section id="hackaton">
-		<img src="assets/img/hackathon.jpg">
+		<img id="img-hack" src="assets/img/hackathon.jpg">
 		<div class="contenedor">
 		<h1 class="bloque">HACKATON</h1>
 		<p class="bloque">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta fuga a, amet ea reiciendis placeat quas cumque? Laboriosam consequatur consectetur autem natus eaque dolore, necessitatibus minus cum possimus incidunt, voluptatibus.</p>
-		<button class="bloque">BOTÓN</button>
+		<button class="bloque" onclick="hack()">HACKATON</button>
 		</div>
 	</section>
 	<section id="contact">
