lista validacion de formulario

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 			<p>Avenida Sol #1050</p>
 			<p>San Pedro, RM</p>
 			<p>Fono:(+56)86896860</p>
-			<input class="bloque" type="text" placeholder="Name" id="name" required>
-			<input class="bloque" type="text" id="lastname" placeholder="Last name" required>
-			<input class="bloque" type="email" placeholder="Email" id="correo" required>
-			<input class="bloque" type="text" placeholder="Message" id="mensaje" required>
+			<input class="bloque" type="text" placeholder="Name" id="name" title="Campo requerido" required>
+			<input class="bloque" type="text" id="lastname" title="Campo requerido" placeholder="Last name" required>
+			<input class="bloque" type="email" placeholder="Email" id="correo" title="Campo requerido" required>
+			<input class="bloque" type="text" placeholder="Message" id="mensaje" title="Campo requerido" required>
 			<button onclick="validacion()">ENVIAR</button>
 		</form>
 	</section>
